@@ -6,6 +6,7 @@ Revision history for Cassandra-Client
       * Encoder rewritten in XS, for performance
       * Support connecting to Cassandra via IPv6
       * Implement exponential backoff for connection failures
+      * Avoid deep recursion when executing many queries concurrently
 
 0.13    2017/07/05
 
